--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1,37 +1,4 @@
 en:
-  sex: Sex
-  teacher:
-    list: Teachers list
-    new: New Teacher
-    name: Name
-    save: Save Teacher
-    edit: Edit Teacher
-    show: Show Teacher
-    singular: Teacher
-    plural: Teachers
-  role:
-    list: Roles list
-    add: Add Role
-    name: Name
-    save: Save Role
-    edit: Edit Role
-  success:
-    enrolled: "Successfully enrolled!"
-  failure:
-    enrolled: "Failed to enroll!"
-  extracurricular_activity:
-    add: Add Extracurricular Activity
-    singular: Extracurricular Activity
-    plural: Extracurricular Activities
-    list: Extracurricular Activities list
-    new: New Extracurricular Activity
-    name: Name
-    save: Save
-    show: Show Extracurricular Activity
-    edit: Edit Extracurricular Activity
-    enroll: Enroll to Extracurricular Activity
-  extracurricular_activity_enrollment:
-    list: Student list
   achievement:
     add: Add Achievement
     authority: Authority
@@ -68,10 +35,10 @@ en:
     zipcode: ZIP Code
   admitted: Admitted On
   alert:
-    already_added: ! '%{resource} are already added!'
-    empty: ! '%{resource} is empty!'
+    already_added: '%{resource} are already added!'
+    empty: '%{resource} is empty!'
     not_selected: No %{resource} selected!
-  and: ! ' and '
+  and: ' and '
   are_you_sure: Are you sure?
   assignment:
     add: Add Assignment
@@ -101,8 +68,8 @@ en:
     name: Name
     new: New Attachment
     plural: Attachments
-    singular: Attachment
     save: Save Attachment
+    singular: Attachment
   attendance_type:
     add: Add Attendance Type
     auto_credit: Auto Credit
@@ -118,11 +85,12 @@ en:
     save: Save Attendance Type
     singular: Attendance Type
   back: Back
-  sex_and_birth: Sex/Birth Date
   birth: Birth Date
+  birth_and: and
+  birth_between: Birth date between
+  birth_date: Birth Date
   birth_date_from: Birth date(from)
   birth_date_to: Birth date(to)
-  birth_date: Birth Date
   campus:
     add: Add Campus
     address: Campus Address
@@ -141,7 +109,6 @@ en:
     changed_at: Changed At
     event: Event
     from: From
-    user: Changed by
     student:
       list: Student Changes list
     student_address:
@@ -149,6 +116,7 @@ en:
     student_contact:
       list: Student Contact Changes list
     to: To
+    user: Changed by
   class: Class
   class_group:
     add: Add Class Group
@@ -227,7 +195,7 @@ en:
     add: Add Course
     choose: Choose Course
     code: Course Code
-    code_sample: ! '[EX: FALL2020]'
+    code_sample: '[EX: FALL2020]'
     combined_code: Combined Code
     count: Courses count
     edit: Edit Course
@@ -312,6 +280,9 @@ en:
       updated: Your password was changed successfully. You are now signed in.
       updated_not_active: Your password was changed successfully.
     registrations:
+      admin_set_up: |-
+        This is your first time running GAKU Engine.
+        Please set up the Admin user.
       destroyed: Bye! Your account was successfully cancelled. We hope to see you again soon.
       inactive_signed_up: You have signed up successfully. However, we could not sign you in because your account is %{reason}.
       reasons:
@@ -325,7 +296,6 @@ en:
       signed_up_but_unconfirmed: This account has not been confirmed
       update_needs_confirmation: Registration update needs confirmation
       updated: You updated your account successfully.
-      admin_set_up: This is the first time you are running this application. Please set up admin user.
     sessions:
       remember_me: Remember me
       sign_in: Sign in
@@ -370,8 +340,8 @@ en:
       not_found: not found
       not_locked: was not locked
       not_saved:
-        one: ! '1 error prohibited this %{resource} from being saved:'
-        other: ! '%{count} errors prohibited this %{resource} from being saved:'
+        one: '1 error prohibited this %{resource} from being saved:'
+        other: '%{count} errors prohibited this %{resource} from being saved:'
     not_uploaded: Error when upload %{resource}!
   exam:
     add: Add Exam
@@ -380,10 +350,13 @@ en:
     adjustments: Adjustments
     choose: Choose Exam
     choose_schedule: Choose Schedule
+    completion: Completion
     count: Exams Count
     description: Description
     edit: Edit Exam
     exam_score: Exam Score
+    graded: Graded
+    grading_completion: Grading Completion
     grading_method: Grading Method
     list: Exams List
     name: Exam name
@@ -395,15 +368,12 @@ en:
     select: Select Exam
     show: Show Exam
     singular: Exam
+    total: Total
     total_weight: Total Weight
+    ungraded: Ungraded
     use_weighting: Use Weighting
     view: View Exams
     weight: Weight
-    ungraded: Ungraded
-    graded: Graded
-    total: Total
-    completion: Completion
-    grading_completion: Grading Completion
   exam_portion:
     adjustments: Adjustments
     attached_file_count: Attached file count
@@ -424,21 +394,36 @@ en:
     use_weighting: Use Weighting
     weight: Weight
   external_school_record:
-    student_id_number: Student ID number
-    beginning: Beginning
-    ending: Ending
     absences: Absences
     attendance_rate: Attendance Rate
+    beginning: Beginning
     data: Data
+    ending: Ending
+    student_id_number: Student ID number
+  extracurricular_activity:
+    add: Add Extracurricular Activity
+    edit: Edit Extracurricular Activity
+    enroll: Enroll to Extracurricular Activity
+    list: Extracurricular Activities list
+    name: Name
+    new: New Extracurricular Activity
+    plural: Extracurricular Activities
+    save: Save
+    show: Show Extracurricular Activity
+    singular: Extracurricular Activity
+  extracurricular_activity_enrollment:
+    list: Student list
+  failure:
+    enrolled: Failed to enroll!
   flash:
     actions:
       create:
-        notice: ! '%{resource_name} was successfully created!'
+        notice: '%{resource_name} was successfully created!'
       destroy:
-        alert: ! '%{resource_name} could not be destroyed!'
-        notice: ! '%{resource_name} was successfully destroyed!'
+        alert: '%{resource_name} could not be destroyed!'
+        notice: '%{resource_name} was successfully destroyed!'
       update:
-        notice: ! '%{resource_name} was successfully updated!'
+        notice: '%{resource_name} was successfully updated!'
   gender:
     choose: Choose Gender
     female: Female
@@ -463,15 +448,15 @@ en:
     weighting: Weight
     weighting_portion: Weighting
   grading_method:
-    singular: Grading Method
-    plural: Grading Methods
-    list: Grading Methods list
     add: Add Grading Method
     description: Description
-    name: Name
-    method: Methods
-    save: Save Grading Method
     edit: Edit Grading Method
+    list: Grading Methods list
+    method: Methods
+    name: Name
+    plural: Grading Methods
+    save: Save Grading Method
+    singular: Grading Method
   graduated: Graduated On
   guardian:
     add: Add Guardian
@@ -508,26 +493,23 @@ en:
         student_addresses: Student Addresses
         student_contacts: Student Contacts
         students: Students
-      users:
-        users_and_roles: Users & Roles
-        users: Users
-        roles: Roles
       disposals:
-        student: Student Disposals
         attachment: Attachment Disposals
         course_group: Course Group Disposals
         disposals: Disposals
         exam: Exam Disposals
+        student: Student Disposals
         student_address: Student Addresses Disposals
+      grading_methods: Grading Methods
       preset:
         grading:
           grading_method: Grading Method
           grading_scheme: Grading Scheme
         items:
+          defaults: Defaults Preset
           grading: Grading Preset
           locale: Locale Preset
           student: Student Preset
-          defaults: Defaults Preset
         plural: Presets
         save: Save
         singular: Preset
@@ -539,7 +521,6 @@ en:
       school_details: School Details
       schools: Schools
       specialties: Specialties
-      grading_methods: Grading Methods
       system:
         backup: Backup
         system_tools: System Tools
@@ -549,6 +530,10 @@ en:
         contact: Contact Types
         enrollment_status: Enrollment Statuses
         types: Types & Methods
+      users:
+        roles: Roles
+        users: Users
+        users_and_roles: Users & Roles
     class_group:
       management: Class Management
       plural: Class Groups
@@ -560,14 +545,14 @@ en:
     exam:
       management: Exam Management
       plural: Exams
-    student:
-      plural: Students
-    teacher:
-      plural: Teachers
     extracurricular_activity:
       plural: Extracurriculars
+    student:
+      plural: Students
     syllabus:
       plural: Syllabuses
+    teacher:
+      plural: Teachers
   name: Name
   name_reading: Name Reading
   none: None
@@ -583,15 +568,15 @@ en:
     singular: Note
     title: Note Title
   notice:
-    added: ! '%{resource} has been successfully added!'
-    created: ! '%{resource} has been successfully created!'
-    destroyed: ! '%{resource} has been successfully destroyed!'
-    enrolled: ! '%{resource} has been successfully enrolled to %{to}!'
+    added: '%{resource} has been successfully added!'
+    created: '%{resource} has been successfully created!'
+    destroyed: '%{resource} has been successfully destroyed!'
+    enrolled: '%{resource} has been successfully enrolled to %{to}!'
     no_resource_assign_first: No %{resource}, assign one first
-    recovered: ! '%{resource} has been successfully recovered'
-    removed: ! '%{resource} has been successfully removed!'
-    updated: ! '%{resource} has been successfully updated!'
-    uploaded: ! '%{resource} has been successfully uploaded!'
+    recovered: '%{resource} has been successfully recovered'
+    removed: '%{resource} has been successfully removed!'
+    updated: '%{resource} has been successfully updated!'
+    uploaded: '%{resource} has been successfully uploaded!'
   num_enrolled: Number Enrolled
   options: Options
   order: Order
@@ -621,12 +606,19 @@ en:
     save: Save profile
   required: required
   revert: Revert
+  role:
+    add: Add Role
+    edit: Edit Role
+    list: Roles list
+    name: Name
+    save: Save Role
   save: Save
   schedule: Schedule
   scholarship_status: Scholarship Status
   school:
     add: Add School
     campuses: Campuses
+    choose: Choose School
     code: Code
     description: Description
     edit: Edit School
@@ -641,11 +633,10 @@ en:
     primary: Primary
     principal: Principal
     save: Save School
+    show: School Show
     singular: School
     slogan: Slogan
     vice_principal: Vice Principal
-    choose: Choose School
-    show: School Show
   search: Search
   select: Select
   semester:
@@ -659,6 +650,8 @@ en:
     save: Save semester
     starting: Starting
     uniqueness: have this semester added
+  sex: Sex
+  sex_and_birth: Sex/Birth Date
   show: Show
   simple_grade:
     add: Add Simple Grade
@@ -683,10 +676,10 @@ en:
     save: Save Specialty
     singular: Specialty
   student:
-    choose: Choose students
     add: Add Student
     birth_and: and
     birth_between: Birth date between
+    choose: Choose students
     chosen_students: Chosen students
     class_group_enrollment: Class enrollment
     commute_method: Commute Method
@@ -714,6 +707,8 @@ en:
     index: Student Specialty Index
     save: Save Student Specialty
   submit: Submit
+  success:
+    enrolled: Successfully enrolled!
   surname: Surname
   surname_reading: Surname Reading
   syllabus:
@@ -724,27 +719,28 @@ en:
     import: Import Syllabuses
     list: List Syllabuses
     name: Course Name
-    name_sample: ! '[EX: Science A]'
+    name_sample: '[EX: Science A]'
     new: New Syllabus
     plural: Syllabuses
     save: Save Syllabus
     show: Show Syllabus
     singular: Syllabus
+  teacher: Instructor
   title: Title
   user:
-    info: User info
-    username: Username
-    email: Email
-    password: Password
-    password_confirmation: Confirm Password
-    list: Users list
     add: Add User
     edit: Edit User
+    email: Email
+    info: User info
+    list: Users list
+    password: Password
+    password_confirmation: Confirm Password
     save: Save User
+    username: Username
   views:
     pagination:
-      first: ! '&laquo; First'
+      first: '&laquo; First'
       last: Last &raquo;
       next: Next &rsaquo;
-      previous: ! '&lsaquo; Prev'
-      truncate: ! '...'
+      previous: '&lsaquo; Prev'
+      truncate: '...'
