--- a/core/config/locales/pt-BR.yml
+++ b/core/config/locales/pt-BR.yml
@@ -721,7 +721,9 @@ pt-BR:
     save: 
     show: 
     singular: 
-  teacher: 
+  teacher:
+    plural: 
+    singular: 
   title: 
   user:
     add: 
