--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -520,6 +520,7 @@ en:
         exam: Exam Disposals
         student_address: Student Addresses Disposals
       preset:
+        pagination: Pagination Preset
         grading:
           grading_method: Grading Method
           grading_scheme: Grading Scheme
@@ -604,6 +605,10 @@ en:
     change: Change picture
     upload: Upload
   preset:
+    pagination: Pagination
+    per_page:
+      default: Default Per Page
+      changes: Changes Per Page
     grading:
       grading_method: Grading Method
       grading_scheme: Grading Scheme
