--- a/core/config/locales/bg.yml
+++ b/core/config/locales/bg.yml
@@ -35,8 +35,8 @@ bg:
     zipcode: Пощенски код
   admitted: Приет на
   alert:
-    already_added: '%{resource} са вече добавени!'
-    empty: '%{resource} е празен!'
+    already_added: ! '%{resource} са вече добавени!'
+    empty: ! '%{resource} е празен!'
     not_selected: Няма избран %{resource}!
   and: и
   are_you_sure: Сигурен ли сте?
@@ -195,7 +195,7 @@ bg:
     add: Добави Курс
     choose: Избери Курс
     code: Код на Курса
-    code_sample: '[ПР: ЕСЕН2020]'
+    code_sample: ! '[ПР: ЕСЕН2020]'
     combined_code: Комбиниран Код
     count: Брой Курсове
     edit: Редактирай Курс
@@ -246,20 +246,20 @@ bg:
   destroy: Изтрий
   devise:
     confirmations:
-      confirmed: 
-      send_instructions: 
-      send_paranoid_instructions: 
-    email: 
+      confirmed: Вашият акаунт беше създаден успешно. В момента сте в системата.
+      send_instructions: Ще получите имейл с инструкции как да потвърдите вашия акаунт до няколко минути.
+      send_paranoid_instructions: Ако вашият имейл адрес е в нашата база данни, ще получите имейл с инструкции как да потвърдите вашия акаунт до няколко минути.
+    email: Имейл
     failure:
-      already_authenticated: 
-      inactive: 
-      invalid: 
-      invalid_token: 
-      locked: 
-      timeout: 
-      unauthenticated: 
-      unconfirmed: 
-    login: 
+      already_authenticated: Влезли сте в системата.
+      inactive: Вашият акаунт не е активиран все още.
+      invalid: Невалиден имейл или парола.
+      invalid_token: Невалиден аутентикиращ токен.
+      locked: Вашият акаунт е заключен.
+      timeout: Вашата сесия е изтекла, моля влезте в системата за да продължите.
+      unauthenticated: Нужно е да влезете в системата преди да продължите.
+      unconfirmed: Нужно е да потвърдите вашия акаунт преди да продължите.
+    login: Потребителско име или Имейл
     mailer:
       confirmation_instructions:
         subject: 
@@ -268,13 +268,13 @@ bg:
       unlock_instructions:
         subject: 
     omniauth_callbacks:
-      failure: 
-      success: 
-    password: 
-    password_confirmation: 
+      failure: Системата не можа да ви оторизира от %{kind} защото "%{reason}".
+      success: Успешно оторизиран от %{kind} акаунт.
+    password: Парола
+    password_confirmation: Потвърждаване на парола
     passwords:
-      forgot: 
-      no_token: 
+      forgot: Забравена парола?
+      no_token: Няма Токен.
       send_instructions: 
       send_paranoid_instructions: 
       updated: 
@@ -304,25 +304,25 @@ bg:
       send_instructions: 
       send_paranoid_instructions: 
       unlocked: 
-    username: 
-  edit: 
-  email: 
-  enroll_to_class: 
+    username: Потребителско Име
+  edit: Редактиране
+  email: Поща
+  enroll_to_class: Записване в клас
   enrollment:
-    plural: 
-    singular: 
+    plural: Записи
+    singular: Запис
   enrollment_status:
-    active: 
-    add: 
-    edit: 
-    list: 
-    name: 
-    new: 
-    plural: 
-    save: 
-    singular: 
+    active: Активен
+    add: Добави Статус на Записване
+    edit: Редактирай Статус на Записване
+    list: Списък Статуси на Записване
+    name: Име
+    new: Нов Статус на Записване
+    plural: Статуси на Записване
+    save: Запази Статус на Записване
+    singular: Статус на Записване
   enrollment_status_type:
-    active: 
+    active: Активен
     add: 
     edit: 
     list: 
@@ -506,6 +506,7 @@ bg:
           grading: 
           locale: 
           student: 
+        pagination: 
         plural: 
         save: 
         singular: 
@@ -588,6 +589,10 @@ bg:
     grading:
       grading_method: 
       grading_scheme: 
+    pagination: 
+    per_page:
+      changes: 
+      default: 
     plural: 
     save: 
     singular: 
