--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -420,6 +420,7 @@ en:
     singular: Exam Portion
     use_weighting: Use Weighting
     weight: Weight
+    error: Please correct exam portions. Total are over 100.
   external_school_record:
     student_id_number: Student ID number
     beginning: Beginning
