[view] fixing attachment disposals

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -103,6 +103,7 @@ en:
     plural: Attachments
     singular: Attachment
     save: Save Attachment
+    associated: Attachable are not present
   attendance_type:
     add: Add Attendance Type
     auto_credit: Auto Credit
