--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -97,7 +97,7 @@ en:
     file_name: File name
     file_size: File size
     file_type: File type
-    list: Attachment list
+    list: Attachments list
     name: Name
     new: New Attachment
     plural: Attachments
