--- a/core/config/locales/ja.yml
+++ b/core/config/locales/ja.yml
@@ -70,6 +70,8 @@ ja:
     plural: 添付ファイル
     save: 添付ファイルを保存
     singular: 添付ファイル
+    associated: Attachable is not present
+    attachment_recovered: Asset was successfully recovered!
   attendance_type:
     add: 出席類を追加
     auto_credit: 点数の自動計算
