--- a/core/config/locales/bg.yml
+++ b/core/config/locales/bg.yml
@@ -312,6 +312,7 @@ bg:
     username: Потребителско Име
   edit: Редактиране
   email: Поща
+  empty: 
   enroll_to_class: Записване в клас
   enrollment:
     plural: Записи
